--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,18 +13,19 @@ ul {
   list-style-type: none;
   margin: 0 0 2em 0;
   padding: 0;
-}
 
-ul li {
-  display: inline;
-  margin-right: 30px;
-}
+  li {
+    display: inline;
+    margin-right: 30px;
 
-ul li a {
-  font-size: 1.5em;
+    a {
+      color: #FFF;
+      text-decoration: none;
+      font-size: 1.5em;
+    }
+  }
 }
 
 a {
-  color: #FFF;
-  text-decoration: none;
+  color: #fff;
 }
